
Fixes:
- drawing api:       polygon fill to draw before outline, related to #371
- collapsing header: quering open/close works now
- numpy:             list of int/float can now use numpy #105
- treenode:          changing labels no longer reset state #373
- collapsing Header: changing labels fixed
- Mac sizing:        Partially fixed. #348 #365
- Logger:            Fixed autoscroll mac bug #347


-----------------------------------------------------------------------
 VERSION 0.6.35
-----------------------------------------------------------------------

Fixes:
- plots:           fixed plot scaling issue #364
- get_item_width:  now works for non-container widgets
- get_item_height: now works for non-container widgets

-----------------------------------------------------------------------
 VERSION 0.6.34
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.34

Fixes:
- exit callback: fixed exit callback being called twice
- tooltips:      fixed tooltips in managed columns issue #360

-----------------------------------------------------------------------
 VERSION 0.6.32
-----------------------------------------------------------------------

New Commands:
- docking:   Added "enable_docking" command

Fixes:
- tables:          fixed color alignment issue
- get_item_width:  now works for non-container widgets
- get_item_height: now works for non-container widgets

-----------------------------------------------------------------------
 VERSION 0.6.27
-----------------------------------------------------------------------

Fixes:
- set_item_label: fixed label always being empty #354
- modify_draw_command: fixed issue with draw image uv_max #352

-----------------------------------------------------------------------
 VERSION 0.6.24
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.24