@@ -1,24 +1,16 @@
 from dearpygui.core import *
 from dearpygui.simple import *
-from dearpygui.demo import *
-from math import sin, cos
-import random
-import time
 
-set_log_level(0)
-#enable_docking(shift_only=False, dock_space=True)
-
-set_main_window_title("DearPyGui Demo")
-set_main_window_size(1000, 800)
-set_main_window_pos(0, 0)
-add_additional_font("../../Resources/NotoSerifCJKjp-Medium.otf", 20)
-
-# char remaps
-#add_character_remap(0x0041, 0x00A2)
-#add_character_remap(0x0061, 0x00AB)
-
-
-show_demo()
-show_logger()
-
-start_dearpygui()
+def widget_editor(sender, data):
+    delete_item("group1", children_only=True)
+    log_debug(f"{get_value(sender)}")
+    log_debug(does_item_exist("label1"))
+    #add_label_text("label1", default_value=f"{get_value(sender)}", parent="group1")
+    log_debug( get_value("label1"))
+    log_debug( get_value("label2"))
+with window("Main Window"):
+    show_logger()
+    add_slider_int("slider1", default_value=3, callback=widget_editor)
+    with group("group1"):
+        add_label_text("label1", default_value="here")
+start_dearpygui(primary_window="Main Window")
